# sql-generator

./: .env  .env.example  .gitignore  README.md  README_API.md  pyproject.toml  requirements.txt  run.ps1  run.sh
data/: tables.json
sql_generator/: __init__.py
src/: api.py  cli.py  server.py
src/agents/: sql_agent.py
tests/: test_sql_agent.py
